data/all_generated_tests/raw_wast_tests/return_EdgeCaseFailuresinbr_table_3037.wast
;; 6. **Test: `br_table` with Invalid Index and Fallthrough Return**    - **Description**: Use a `br_table` instruction with an invalid index, which falls through to a `return`. This test checks if the function correctly executes the return despite the failed `br_table` jump.    - **Constraint**: Verifying proper fallthrough behavior to `return` despite invalid branching.

(assert_invalid
  (module
    (func (result i32)
      (i32.const 1)
      (block (br_table 1 (return)))
    )
  )
  "type mismatch"
)